--- a/styles/style.css
+++ b/styles/style.css
@@ -41,8 +41,6 @@
   margin-left: 64px;
   align-self: center;
   z-index: 3;
-}
-.header__title_text_large {
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
@@ -54,11 +52,14 @@
   bottom: 30px;
   left: 64px;
   z-index: 3;
-}
-header__subtitle_text_middle {
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+}
+
+.header__link {
+  text-decoration: none;
+  color: #2f80ed;
 }
 
 .header__main-illustration {
@@ -79,6 +80,67 @@ header__subtitle_text_middle {
   right: 0;
   z-index: 1;
 }
+
+/* Основное содержимое страницы */
+
+.content__description {
+  margin-top: 100px;
+}
+.content__digits {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.content__kaufman {
+  margin-top: 90px;
+  margin-bottom: 90px;
+}
+
+/* Секция Описание */
+
+.description {
+  display: flex;
+  justify-content: center;
+}
+.description__two-columns {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.two-columns {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  min-height: 360px;
+}
+
+.two-columns__paragraph {
+  margin-top: 30px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.two-columns__paragraph:first-child {
+  margin-top: 0px;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
