--- a/styles/style.css
+++ b/styles/style.css
@@ -141,6 +141,68 @@
   font-weight: 600;
 }
 
+/* Секция Цифры */
+
+.section-title {
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+.section-title_locaton_digits {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.section-subtitle {
+  width: 60%;
+  line-height:  34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.section-subtitle_locaton_digits {
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.table {
+  width: 1100px;
+  display: flex;
+  justify-content:space-between;
+  flex-wrap: wrap;
+  align-content: flex-end;
+}
+.table_locaton_digits {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.table__cell {
+  width: 250px;
+}
+.table__cell_locaton_digits {
+  margin-top: 60px;
+}
+
+.table__heading {
+  line-height:  1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+
+.table__text {
+  line-height:  1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+.table__text_margin {
+  margin-top: 20px;
+}
+
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
