--- a/styles/style.css
+++ b/styles/style.css
@@ -203,6 +203,52 @@
   margin-top: 20px;
 }
 
+/* Секция Фейман */
+.feynman {
+  min-width: 1100px;
+  max-width: 1600px;
+  height:  890px;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-color: #f2f2f2 ;
+  padding-top: 100px;
+  position: relative;
+}
+.feynman__title {
+  width: 648px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+}
+.feynman__title_margin {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.feynman__subtitle {
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+.feynman__subtitle_margin {
+  margin-top: 70px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  color: #2f80ed;
+  text-decoration: none;
+}
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
