--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+section {
+  border: 1px solid red;
+}
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -89,10 +92,6 @@
 .content__digits {
   margin-top: 100px;
   margin-bottom: 100px;
-}
-.content__kaufman {
-  margin-top: 90px;
-  margin-bottom: 90px;
 }
 
 /* Секция Описание */
@@ -250,10 +249,63 @@
   text-decoration: none;
 }
 
+/* Секция Кауфман */
+.kaufman {
+  background-color: #1f1f1f;
+  padding-top: 90px;
+  padding-bottom: 90px;
+  position: relative;
+  overflow: hidden;
+}
+
+.section-title_theme_dark {
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  z-index: 1;
+  position: relative;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  z-index: 1;
+}
+
+.table_theme_dark {
+  background-color: #1f1f1f;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 1;
+}
+
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 1;
+}
+
+.table__heading_theme_dark {
+  color: white;
+}
+
+.table__text_theme_dark {
+  margin-top: 20px;
+  color: white;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  right: -210px;
+  top: 0;
 }
