--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,7 @@
-section {
-  border: 1px solid red;
-}
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
@@ -33,6 +26,7 @@ section {
   width: 228px;
   height: 32px;
 }
+
 .logo_place_header {
   position: absolute;
   top: 30px;
@@ -86,27 +80,17 @@ section {
 
 /* Основное содержимое страницы */
 
-.content__description {
-  margin-top: 100px;
-}
-.content__digits {
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
-
 /* Секция Описание */
 
 .description {
   display: flex;
   justify-content: center;
-}
-.description__two-columns {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  padding-top: 100px;
 }
 
 .two-columns {
   width: 80%;
+  min-height: 325px;
   display: flex;
   justify-content: space-between;
 }
@@ -118,10 +102,10 @@ section {
   font-weight: normal;
   color: #2f80ed;
 }
+
 .two-columns__main-text {
   width: 80%;
   min-width: 784px;
-  min-height: 360px;
 }
 
 .two-columns__paragraph {
@@ -130,6 +114,7 @@ section {
   font-size: 24px;
   font-weight: normal;
 }
+
 .two-columns__paragraph:first-child {
   margin-top: 0px;
 }
@@ -142,12 +127,18 @@ section {
 
 /* Секция Цифры */
 
+.digits {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
 .section-title {
   width: 60%;
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
 }
+
 .section-title_locaton_digits {
   margin-left: auto;
   margin-right: auto;
@@ -160,6 +151,7 @@ section {
   font-size: 24px;
   font-weight: normal;
 }
+
 .section-subtitle_locaton_digits {
   margin-top: 20px;
   margin-left: auto;
@@ -182,6 +174,7 @@ section {
 .table__cell {
   width: 250px;
 }
+
 .table__cell_locaton_digits {
   margin-top: 60px;
 }
@@ -198,14 +191,14 @@ section {
   font-size: 18px;
   font-weight: normal;
 }
+
 .table__text_margin {
   margin-top: 20px;
 }
 
 /* Секция Фейман */
+
 .feynman {
-  min-width: 1100px;
-  max-width: 1600px;
   height:  890px;
   background-image: url(../images/feynman.png);
   background-repeat: no-repeat;
@@ -214,14 +207,13 @@ section {
   padding-top: 100px;
   position: relative;
 }
+
 .feynman__title {
   width: 648px;
   text-align: center;
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
-}
-.feynman__title_margin {
   margin-left: auto;
   margin-right: auto;
 }
@@ -231,8 +223,6 @@ section {
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
-}
-.feynman__subtitle_margin {
   margin-top: 70px;
   margin-left: auto;
   margin-right: auto;
