--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,7 @@
 /* Шапка сайта */
 
 .header {
+  box-sizing: border-box;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
@@ -83,6 +84,7 @@
 /* Секция Описание */
 
 .description {
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
   padding-top: 100px;
@@ -128,6 +130,7 @@
 /* Секция Цифры */
 
 .digits {
+  box-sizing: border-box;
   padding-top: 100px;
   padding-bottom: 100px;
 }
@@ -199,6 +202,7 @@
 /* Секция Фейман */
 
 .feynman {
+  box-sizing: border-box;
   height:  890px;
   background-image: url(../images/feynman.png);
   background-repeat: no-repeat;
@@ -242,6 +246,7 @@
 /* Секция Кауфман */
 
 .kaufman {
+  box-sizing: border-box;
   background-color: #1f1f1f;
   padding-top: 90px;
   padding-bottom: 90px;
@@ -303,6 +308,7 @@
 /* Подвал сайта */
 
 .footer {
+  box-sizing: border-box;
   min-height: 350px;
   background-color: #1f1f1f;
   color: white;
