--- a/styles/style.css
+++ b/styles/style.css
@@ -164,6 +164,8 @@
 }
 
 .table {
+  margin: 0;
+  padding: 0;
   margin-left: auto;
   margin-right: auto;
   width: 1100px;
@@ -171,6 +173,7 @@
   justify-content:space-between;
   flex-wrap: wrap;
   align-content: flex-end;
+  list-style-type: none;
 }
 
 .table__cell {
