--- a/pages/index.css
+++ b/pages/index.css
@@ -33,10 +33,14 @@
 @import url(../blocks/table/__cell/table__cell.css);
 @import url(../blocks/table/__heading/table__heading.css);
 @import url(../blocks/table/__text/table__text.css);
-@import url();
-@import url();
-@import url();
-@import url();
+
+/* Секция Фейман */
+
+@import url(../blocks/feynman/feynman.css);
+@import url(../blocks/feynman/__title/feynman__title.css);
+@import url(../blocks/feynman/__subtitle/feynman__subtitle.css);
+@import url(../blocks/feynman/__link/feynman__link.css);
+
 @import url();
 @import url();
 @import url();
