--- a/pages/index.css
+++ b/pages/index.css
@@ -37,6 +37,12 @@
 @import url(../blocks/cards/__title/cards__title.css);
 @import url(../blocks/cards/__description/cards__description.css);
 
+/* Секция Видео */
+
+@import url(../blocks/video/video.css);
+@import url(../blocks/video/__iframes/video__iframes.css);
+@import url(../blocks/video/__iframe/video__iframe.css);
+
 /* Секция Цифры */
 
 @import url(../blocks/digits/digits.css);
