--- a/blocks/khan/__book-container/khan__book-container.css
+++ b/blocks/khan/__book-container/khan__book-container.css
@@ -2,10 +2,5 @@
   margin: 68px 0 0;
   height: 608px;
   overflow: hidden;
-}
-
-.khan__book-container::after {
-  content: "";
-  clear: both;
-  display: table;
+  display: flex;
 }
