--- a/pages/index.css
+++ b/pages/index.css
@@ -88,6 +88,13 @@
 @import url(../blocks/table/__text/_theme/table__text_theme_dark.css);
 @import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
 
+/* Секция Ресурсы */
+
+@import url(../blocks/resources/resources.css);
+@import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/resources/__link/resources__link.css);
+@import url(../blocks/resources/__logo/resources__logo.css);
+
 /* Подвал сайта */
 
 @import url(../blocks/footer/footer.css);
