--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -9,4 +9,10 @@
   font-weight: normal;
   color: #2f80ed;
   text-decoration: none;
+  opacity: 1;
+}
+
+.feynman__link:hover {
+  opacity: 0.7;
+  transition: opacity 0.5s linear;
 }
