--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -6,4 +6,10 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
+  opacity: 1;
+}
+
+.footer__column-link:hover {
+  opacity: 0.7;
+  transition: opacity 0.5s linear;
 }
