--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -7,4 +7,10 @@
   line-height: 42px;
   font-size: 30px;
   font-weight: normal;
+  opacity: 1;
+}
+
+.khan__buy-link:hover {
+  opacity: 0.7;
+  transition: opacity 0.5s linear;
 }
