--- a/blocks/resources/__link/resources__link.css
+++ b/blocks/resources/__link/resources__link.css
@@ -3,4 +3,10 @@
   padding: 0;
   text-decoration: none;
   height: 38px;
+  opacity: 1;
+}
+
+.resources__link:hover {
+  opacity: 0.7;
+  transition: opacity 0.5s linear;
 }
