--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,6 +1,6 @@
 .feynman {
   box-sizing: border-box;
-  height:  890px;
+  min-height:  890px;
   background-image: url(../../images/feynman.png);
   background-repeat: no-repeat;
   background-position: left bottom;
