--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,6 +1,8 @@
 .resources__logo-zone {
-  width: 1100px;
+  list-style-type: none;
+  padding: 0;
   margin: 80px auto 0;
+  width: 1100px;
   display: flex;
   justify-content: space-around;
 }
